...
            "state" : "translated",
            "value" : "未授予文件访问权限"
          }
        }
      }
    },
    "File access was not granted." : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "未授予文件访问权限。"
          }
...
    },
    "transcript.edit" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "编辑"
...
